[package]
name = "sig-bitmap"
version = "0.0.1"
edition = "2021"
authors = ["Srinidhi Kaushik <clickyotomy@users.noreply.github.com>"]
license = "MIT"
description = "Interpret Signal Bitmaps for a Process"
readme = "README"
homepage = "https://github.com/clickyotomy/sig-bitmap"
repository = "https://github.com/clickyotomy/sig-bitmap"
keywords = ["cli", "signals", "bitmap"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
textwrap = "0.16.1"
